fixed on mobile

--- a/theme/static/css/styles.css
+++ b/theme/static/css/styles.css
@@ -200,7 +200,7 @@ img {
     display: none;
   }
 
-  .navigation, .content {
+  .links-div, .content {
     padding: 0.5rem 1rem;
   }
 
